--- a/skillbox/mod2/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/skillbox/mod2/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -60,7 +60,7 @@
                     <input type="submit" value="remove">
                 </td>
                 <td th:if="${#fields.hasErrors()}">
-                    <p>Wrong id or not book found</p>
+                    <p>Wrong id or not found</p>
                 </td>
             </tr>
         </table>
