--- a/skillbox/mod2/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/skillbox/mod2/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -69,6 +69,23 @@
         </table>
     </form>
 
+    <!-- вида "author=1" || "size=3" etc. -->
+    <form method="post" th:action="@{/books/removeByRegex}" th:object="${booksToRemove}">
+        <table>
+            <tr>
+                <td>
+                    <input type="text" placeholder="regex" th:field="*{book}">
+                </td>
+                <td>
+                    <input type="submit" value="remove by regex">
+                </td>
+                <td th:if="${#fields.hasErrors()}">
+                    <p>Wrong regex(must be of the form: field=value) or empty string</p>
+                </td>
+            </tr>
+        </table>
+    </form>
+
     <form method="post" th:action="@{/books/uploadFile}" enctype="multipart/form-data">
         <table>
             <tr>
