--- a/skillbox/mod2/src/main/webapp/WEB-INF/views/book_shelf.html
+++ b/skillbox/mod2/src/main/webapp/WEB-INF/views/book_shelf.html
@@ -74,7 +74,7 @@
         <table>
             <tr>
                 <td>
-                    <input type="text" placeholder="regex" th:field="*{book}">
+                    <input type="text" placeholder="regex" th:field="*{regEx}">
                 </td>
                 <td>
                     <input type="submit" value="remove by regex">
