--- a/skillbox/mod5/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/skillbox/mod5/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -26,10 +26,10 @@
                     </div>
                     <div class="Header-search">
                         <div class="search">
-                            <form class="form form_search" action="#" method="post" data-searchlimit="20" th:object="${searchWordDto}">
+                            <form class="form form_search" action="#" method="post" data-searchlimit="20"> <!--  th:object="${searchWordDto}" -->
                                 <input class="search-input" id="query" name="query" type="text"
-                                       placeholder="Search over 30 million book titles" th:field="*{example}" value=""
-                                       th:placeholder="#{searchbar.placeholder}"/>
+                                       placeholder="Search over 30 million book titles" value=""
+                                       th:placeholder="#{searchbar.placeholder}"/> <!-- th:field="*{example}" -->
                                 <button class="search-button" type="submit" name="search" id="search"
                                         th:text="#{searchbar.name}">Поиск
                                 </button>
