--- a/skillbox/mod6/src/main/resources/spring-frontend/fragments/books_pool_fragment.html
+++ b/skillbox/mod6/src/main/resources/spring-frontend/fragments/books_pool_fragment.html
@@ -15,7 +15,7 @@
 <!--            <div class="Card-description" th:text="${book.authorName}">-->
 <!--                Кондратенко Валерий Петрович-->
 <!--            </div>-->
-            <div class="Card-description" th:text="${book.description}">
+            <div class="Card-description" th:text="${book.author}">
                 Кондратенко Валерий Петрович
             </div>
             <div class="Card-cost">
